Enhance multi-agent engineering framework with new models and orchestration
- Added `BuildPlan`, `DesignPack`, and `FileManifest` models to structure outputs for the planning and design phases.
- Updated `crew.py` to include new tasks for design and plan execution, integrating the new models.
- Implemented artifact management and orchestration logic to handle dynamic task execution and output generation.
- Created a new `spec.md` file to define a modular to-do app as a trial run for the multi-agent workflow.
- Introduced a `TODO.md` for future enhancements and pipeline robustness improvements.
- Revised agent configurations to include a new `test_infra_engineer` role for ensuring application testability and reliability.
- Updated `.gitignore` to include new artifact directories.

--- a/ez_bshrk/multi_agent_engineering/src/multi_agent_engineering/config/agents.yaml
+++ b/ez_bshrk/multi_agent_engineering/src/multi_agent_engineering/config/agents.yaml
@@ -6,6 +6,7 @@ engineering_lead:
   backstory: >
     You are a pragmatic engineering lead who prioritizes clarity, ownership, and forward progress over cleverness. You do not implement features yourself unless absolutely necessary.
     You break vague requirements into explicit contracts, assign clear ownership, and prevent scope creep. You enforce phase gates, require reviews, and reject work that violates agreed interfaces, modular structure, or acceptance criteria. You prefer small, shippable systems over ambitious but unstable ones.
+  llm: gpt-4o-mini
 
 core_domain_engineer:
   role: >
@@ -18,6 +19,7 @@ core_domain_engineer:
     If requirements are ambiguous or contracts are insufficient, you surface questions early instead of improvising.
     You favor small, composable modules with well-defined responsibilities and predictable behavior.
     You consider tests and edge cases part of defining the domain, not an afterthought.
+  llm: gpt-4o-mini
 
 ui_engineer:
   role: >
@@ -30,3 +32,15 @@ ui_engineer:
     If requirements are ambiguous or contracts are insufficient, you surface questions early instead of improvising.
     You favor small, composable modules with well-defined responsibilities and predictable behavior.
     You consider tests and edge cases part of defining the UI, not an afterthought.
+  llm: gpt-4o-mini
+
+test_infra_engineer:
+  role: >
+    Test & Infrastructure Engineer.
+  goal: >
+    Ensure the generated application is runnable and testable: add a minimal test strategy, write smoke/unit tests, and set up the smallest necessary infrastructure (packaging, entrypoints, CI-friendly commands) without expanding scope.
+  backstory: >
+    You are a pragmatic engineer focused on reliability. You turn acceptance criteria into executable checks.
+    You keep dependencies minimal, prefer deterministic smoke tests, and ensure the project can be run and tested with simple commands.
+    You do not redesign the domain or UI; you work within approved contracts and surface missing seams or testability issues early.
+  llm: gpt-4o-mini
