--- a/ez_bshrk/multi_agent_engineering/src/multi_agent_engineering/config/tasks.yaml
+++ b/ez_bshrk/multi_agent_engineering/src/multi_agent_engineering/config/tasks.yaml
@@ -16,6 +16,58 @@ spec_intake:
     Each value must be an array of strings.
     Do not include any other keys or values.
   agent: engineering_lead
+  output_file: "{artifacts_dir}/spec_pack.json"
+
+design:
+  description: >
+    You are given an approved SpecPack (structured requirements).
+
+    Your task is to design the system architecture and contracts ONLY.
+    Do not implement features. Do not write full code files.
+
+    Produce the following in structured form:
+    - a modular package breakdown (domain / services / ui / infra)
+    - explicit interfaces/contracts between modules
+    - data model outline
+    - ownership map (which agent owns which module in implementation)
+    - a list of risks / assumptions / remaining questions (if any)
+
+    If the SpecPack is insufficient to define stable contracts, raise it explicitly in open_questions.
+  expected_output: >
+    Return JSON ONLY matching the DesignPack schema exactly.
+    No markdown. No prose.
+  agent: core_domain_engineer
+  output_file: "{artifacts_dir}/design_pack.json"
+
+plan_execution:
+  description: >
+    You are given an approved DesignPack (architecture + contracts).
+
+    Your task is to produce a BuildPlan for v1 execution.
+    This is the ONLY place where dynamic task creation is allowed.
+
+    Constraints:
+    - planned_tasks MUST contain at most 3 tasks
+    - each planned task MUST include: task_id, owner_agent, description, acceptance_criteria, expected_deliverables
+    - owner_agent MUST be one of these agent IDs exactly:
+      - engineering_lead
+      - core_domain_engineer
+      - ui_engineer
+      - test_infra_engineer
+    - Do NOT invent new agent IDs (e.g. "service_engineer"). Use only the list above.
+    - If you think you need an infra/storage/devops person, use test_infra_engineer (do not create a new agent id).
+
+    Output target:
+    - The generated application must be a minimal runnable *Python* project skeleton.
+    - No JavaScript/TypeScript outputs.
+    - Keep docs minimal (only what is needed to run/tests).
+
+    Focus on producing a runnable generated app skeleton with minimal docs (only what is needed to run/tests).
+  expected_output: >
+    Return JSON ONLY matching the BuildPlan schema exactly.
+    No markdown. No prose.
+  agent: engineering_lead
+  output_file: "{artifacts_dir}/build_plan.json"
 
 architecture_and_contracts:
   description: >
