--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,6 @@ dependencies = [
     "pypdf2>=3.0.1",
     "python-dotenv>=1.0.1",
     "requests>=2.32.3",
-    "semantic-kernel>=1.25.0",
     "sendgrid>=6.11.0",
     "setuptools>=78.1.0",
     "smithery>=0.1.0",
@@ -46,4 +45,9 @@ dependencies = [
 [dependency-groups]
 dev = [
     "ipykernel>=6.29.5",
+]
+
+[project.optional-dependencies]
+semantic = [
+  "semantic-kernel>=1.25.0"
 ]
